# edge-ai-computer-vision

./: .gitignore  CMakeLists.txt  CMakeOptions.cmake  LICENSE  README.md  copy-to-rpi4.sh  oss-pkg-info.yaml
core/: CMakeLists.txt
core/base/: AIVision.cpp  CMakeLists.txt  Delegate.cpp  DelegateFactory.cpp  Descriptor.cpp  Detector.cpp  DetectorFactory.cpp  DetectorParam.cpp  ExtensionLoader.cpp  SolutionFactory.cpp
core/delegate/: ArmNNDelegate.cpp  CMakeLists.txt  GpuDelegate.cpp  NnapiDelegate.cpp  NpuDelegate.cpp
core/facade/: CMakeLists.txt  EdgeAIVision.cpp  EdgeAIVisionC.cpp  a.ipynb
core/log/: CMakeLists.txt  LogMessage.cpp  Logger.cpp
core/pipe/: CMakeLists.txt  DetectorOperation.cpp  NodeIO.cpp  NodeOperation.cpp  NodeOperationFactory.cpp  NodeType.cpp  Pipe.cpp  PipeConfig.cpp  PipeDescriptorFactory.cpp  PipeNode.cpp
core/tools/: CAPIForTas.cpp  CMakeLists.txt  ConfigReader.cpp  MakeConfig.cpp  PerformanceReporter.cpp  ProcessRunner.cpp  Utils.cpp
example/: CMakeLists.txt
example/dynamic-loading-sample/: CMakeLists.txt  main.cpp
example/face-detect-sample/: CMakeLists.txt  face.json  main.cpp
example/face-websocket-server/: CMakeLists.txt  FaceWSServer.cpp  FaceWSServer.h  FaceWSServerSession.cpp  FaceWSServerSession.h  main.cpp
example/facemesh-sample/: CMakeLists.txt  main.cpp  pipe_face_mesh.json
example/fittv-sample/: CMakeLists.txt  fittv_pipe.json  fittv_pipe_npu_all.json  fittv_pipe_npu_all_v1.json  fittv_pipe_npu_all_v2_low.json  fittv_pipe_npu_all_v2_mid.json  fittv_pipe_v1.json  fittv_pipe_v2_low.json  fittv_pipe_v2_mid.json  fittv_pipe_yolov4.json  main.cpp  verification.cpp  verification.h  verify_pose2d.sh  verify_pose2d_byGTBBOX.sh  verify_pose3d.sh
example/handlandmark-sample/: CMakeLists.txt  handlandmark.json  handlandmark_with_armnn_delegate.json  main.cpp
example/palm-sample/: CMakeLists.txt  main.cpp  palm.json  palm_with_armnn_delegate.json
example/pipe-sample/: CMakeLists.txt  face.json  hand_gesture.json  main.cpp  pipe_pose_npu.json
example/pose2d-sample/: CMakeLists.txt  main.cpp  pose.json
example/poselandmark-sample/: CMakeLists.txt  main.cpp  poselandmark.json  poselandmark_with_armnn_delegate.json  poselandmark_with_gpu_delegate.json
example/posenet-sample/: CMakeLists.txt  main.cpp
example/tools/: Bbox.cpp  Bbox.h  CMakeLists.txt  Renderer.cpp  Renderer.h  Sample.cpp  Sample.h  VideoTester.cpp  VideoTester.h  WSClient.cpp  WSClient.h  WSServer.cpp  WSServer.h  WSServerSession.cpp
extensions/: CMakeLists.txt
extensions/bodypix/: BodypixDescriptor.cpp  BodypixDetector.cpp  BodypixParam.cpp  CMakeLists.txt  CpuBodypixDetector.cpp  EdgeTpuBodypixDetector.cpp
extensions/face/: CMakeLists.txt  CpuFaceDetector.cpp  EdgeTpuFaceDetector.cpp  FaceDescriptor.cpp  FaceDetector.cpp  FaceParam.cpp  YuNetFaceDetector.cpp  YuNetFaceDetectorV2.cpp  YuNetFaceDetectorV2s.cpp  YuNetFaceParam.cpp  YuNetSolutionRegistration.cpp
extensions/handLandmark/: CMakeLists.txt  CpuHandLandmarkDetector.cpp  EdgeTpuHandLandmarkDetector.cpp  HandLandmarkDescriptor.cpp  HandLandmarkDetector.cpp  HandLandmarkParam.cpp
extensions/movenet/: CMakeLists.txt  CpuMovenetDetector.cpp  EdgeTpuMovenetDetector.cpp  MovenetDescriptor.cpp  MovenetDetector.cpp  MovenetParam.cpp
extensions/palm/: CMakeLists.txt  CpuPalmDetector.cpp  EdgeTpuPalmDetector.cpp  PalmDescriptor.cpp  PalmDetector.cpp  PalmParam.cpp
extensions/pipe/: CMakeLists.txt  CropOperation.cpp  PalmCropOperation.cpp
extensions/plugin/: CMakeLists.txt  init.cpp
extensions/pose/: CMakeLists.txt  CpuPosenetDetector.cpp  EdgeTpuPosenetDetector.cpp  PosenetDescriptor.cpp  PosenetDetector.cpp  PosenetParam.cpp
extensions/poseLandmark/: CMakeLists.txt  CpuPoseLandmarkDetector.cpp  EdgeTpuPoseLandmarkDetector.cpp  PoseLandmarkDescriptor.cpp  PoseLandmarkDetector.cpp  PoseLandmarkParam.cpp
extensions/selfie/: CMakeLists.txt  CpuSelfieDetector.cpp  SelfieDescriptor.cpp  SelfieDetector.cpp  SelfieParam.cpp
extensions/semantic/: CMakeLists.txt  CpuSemanticDetector.cpp  EdgeTpuSemanticDetector.cpp  SemanticDescriptor.cpp  SemanticDetector.cpp  SemanticParam.cpp
extensions/signLanguageArea/: CMakeLists.txt  CpuSignLanguageAreaDetector.cpp  SignLanguageAreaDescriptor.cpp  SignLanguageAreaDetector.cpp  SignLanguageAreaParam.cpp
extensions/text/: CMakeLists.txt  CpuTextDetector.cpp  TextDescriptor.cpp  TextDetector.cpp  TextParam.cpp
framework/: CMakeLists.txt  LogMessage.cpp  Logger.cpp  Stopwatch.cpp
framework/base/: AIVision.cpp  CMakeLists.txt  Delegate.cpp  DelegateFactory.cpp  Descriptor.cpp  Detector.cpp  DetectorFactory.cpp  DetectorParam.cpp  Utils.cpp  WSClient.cpp  WSServer.cpp  WSServerSession.cpp
framework/bgSegment/: BgSegmentDescriptor.cpp  BgSegmentDetector.cpp  BgSegmentParam.cpp  CMakeLists.txt  NpuBgSegmentDetector.cpp  NpuBgSegmentDetectors.cpp
framework/bodyPoseEstimation/: BodyPoseEstimationParam.cpp  CMakeLists.txt  common.cpp  transforms.cpp
framework/bodypix/: BodypixDescriptor.cpp  BodypixDetector.cpp  BodypixDetectorFactory.cpp  (+4 more)
test/: CMakeLists.txt  ai_vision_test.cpp  api_facade_multi_requests_test.cpp  api_facade_test.cpp  armnn_delegate_test.cpp  auto_delegate_test.cpp  bodypix_descriptor_test.cpp  bodypix_detector_test.cpp  bodypix_param_test.cpp  capi_facade_test.cpp  config_reader_test.cpp  delegate_factory_test.cpp  descriptor_test.cpp  detector_factory_test.cpp  detector_param_test.cpp  detector_test.cpp  extensionloader_test.cpp  extra_output_test.cpp  face_aifparam_test.cpp  face_descriptor_test.cpp  face_detector_test.cpp  face_mesh_extract_operation_test.cpp  face_param_test.cpp  facemesh_descriptor_test.cpp  facemesh_detector_test.cpp  facemesh_param_test.cpp  full_range_face_detector_test.cpp  gpu_delegate_test.cpp  handlandmark_descriptor_test.cpp  handlandmark_detector_test.cpp  handlandmark_param_test.cpp  logger_test.cpp  movenet_descriptor_test.cpp  movenet_detector_test.cpp  movenet_param_test.cpp  npu_delegate_test.cpp  palm_descriptor_test.cpp  palm_detector_test.cpp  palm_param_test.cpp  performance_reporter_test.cpp  (+40 more)
(+726 files in other folders)
