cmake_minimum_required(VERSION 2.8.7)
project(edgeai-vision CXX)

set(EDGE_AI_VISION_VERSION_MAJOR 1)
set(EDGE_AI_VISION_VERSION_MINOR 1)
set(EDGE_AI_VISION_VERSION_PATCH 0)
set(EDGE_AI_VISION_VERSION_LIST
    "${EDGE_AI_VISION_VERSION_MAJOR}."
    "${EDGE_AI_VISION_VERSION_MINOR}."
    "${EDGE_AI_VISION_VERSION_PATCH}")
string(REPLACE ";" "" EDGE_AI_VISION_VERSION ${EDGE_AI_VISION_VERSION_LIST})

IF("${CMAKE_INSTALL_INCLUDEDIR}" STREQUAL "")
    set(CMAKE_INSTALL_INCLUDEDIR "/usr/include")
ENDIF()

include(FindPkgConfig)
find_package(Boost REQUIRED COMPONENTS system thread filesystem date_time iostreams)
find_package(xtensor REQUIRED)
find_package(xtl REQUIRED)

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
endif()

# find needed packages
find_package(PkgConfig)
pkg_check_modules(TFLITE REQUIRED tensorflowlite)
pkg_check_modules(OPENCV REQUIRED opencv4)
pkg_check_modules(RAPIDJSON REQUIRED RapidJSON)
pkg_check_modules(PMLOGLIB REQUIRED PmLogLib)

# include directories
include_directories(
    ${TFLITE_INCLUDE_DIRS}
    ${OPENCV_INCLUDE_DIRS}
    ${RAPIDJSON_INCLUDE_DIRS}
    ${PMLOGLIB_INCLUDE_DIRS}
)

# link directories
link_directories(
    ${TFLITE_LIBRARY_DIRS}
    ${OPENCV_LIBRARY_DIRS}
    ${RAPIDJSON_LIBRARY_DIRS}
    ${PMLOGLIB_LIBRARY_DIRS}
)

add_definitions(
    -DENABLE_DEBUG
    -DLOG_APPLICATION="AIF"
    -DEDGEAI_VISION_HOME="${AIF_INSTALL_DIR}"
    -DGAUSSIANDARK
    -DAFFINE_TRANS
)

IF(WITH_EDGETPU)
    FIND_PACKAGE(PkgConfig REQUIRED)
    PKG_CHECK_MODULES(EDGETPU REQUIRED edgetpu)
    INCLUDE_DIRECTORIES(${EDGETPU_INCLUDE_DIRS})
    LINK_DIRECTORIES(${EDGETPU_LIBRARY_DIRS})
    ADD_DEFINITIONS(-DUSE_EDGETPU)
ENDIF(WITH_EDGETPU)

IF(WITH_ARMNN)
    FIND_PACKAGE(PkgConfig REQUIRED)
    PKG_CHECK_MODULES(ARMNN-DELEGATE REQUIRED armnn-delegate)
    INCLUDE_DIRECTORIES(${ARMNN-DELEGATE_INCLUDE_DIRS})
    LINK_DIRECTORIES(${ARMNN-DELEGATE_LIBRARY_DIRS})
    ADD_DEFINITIONS(-DUSE_ARMNN)
ENDIF(WITH_ARMNN)

IF(WITH_XNNPACK)
    ADD_DEFINITIONS(-DUSE_XNNPACK)
ENDIF(WITH_XNNPACK)

IF(WITH_GPU)
    ADD_DEFINITIONS(-DUSE_GPU_DELEGATE)
ENDIF(WITH_GPU)

IF(WITH_NPU)
    FIND_PACKAGE(PkgConfig REQUIRED)
    PKG_CHECK_MODULES(NPU-DELEGATE REQUIRED npu-delegate)
    INCLUDE_DIRECTORIES(${NPU-DELEGATE_INCLUDE_DIRS})
    LINK_DIRECTORIES(${NPU-DELEGATE_LIBRARY_DIRS})
    ADD_DEFINITIONS(-DUSE_NPU)
ENDIF(WITH_NPU)

IF(WITH_AUTO_DELEGATE)
    FIND_PACKAGE(PkgConfig REQUIRED)
    PKG_CHECK_MODULES(AUTO-DELEGATE REQUIRED auto-delegation)
    INCLUDE_DIRECTORIES(${AUTO-DELEGATE_INCLUDE_DIRS})
    LINK_DIRECTORIES(${AUTO-DELEGATE_LIBRARY_DIRS})
    ADD_DEFINITIONS(-DUSE_AUTO_DELEGATE)
ENDIF(WITH_AUTO_DELEGATE)

IF(WITH_UPDATABLE_MODELS)
    FIND_PACKAGE(PkgConfig REQUIRED)
    PKG_CHECK_MODULES(GLIB2 REQUIRED glib-2.0)
    INCLUDE_DIRECTORIES(${GLIB2_INCLUDE_DIRS})
    LINK_DIRECTORIES(${GLIB2_LIBRARY_DIRS})
ENDIF(WITH_UPDATABLE_MODELS)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wl,--no-as-needed -O2")

set(HDR_DIR ${CMAKE_SOURCE_DIR}/core)

# Header Files
include_directories(
    ${INCLUDE_DIR}
    ${HDR_DIR}
)

link_directories(
)

# Source Files
set(SRC_FILES
)

set(LIBS
    ${Boost_LIBRARIES}
    ${TFLITE_LIBRARIES}
    ${OPENCV_LIBRARIES}
    ${RAPIDJSON_LIBRARIES}
    ${PMLOGLIB_LDFLAGS}
    pthread
    xtensor
    xtensor::use_xsimd
)

IF(WITH_EDGETPU)
    set(SRC_FILES
        ${SRC_FILES}
        ${EDGETPU_SRCS}
    )
    set(LIBS
        ${LIBS}
        ${EDGETPU_LIBRARIES}
    )
ENDIF(WITH_EDGETPU)

IF(WITH_ARMNN)
    set(LIBS
        ${LIBS}
        ${ARMNN-DELEGATE_LIBRARIES}
    )
ENDIF(WITH_ARMNN)

IF(WITH_NPU)
    set(LIBS
        ${LIBS}
        ${NPU-DELEGATE_LIBRARIES}
    )
ENDIF(WITH_NPU)

IF(WITH_AUTO_DELEGATE)
    set(LIBS
        ${LIBS}
        ${AUTO-DELEGATE_LIBRARIES}
    )
ENDIF(WITH_AUTO_DELEGATE)

IF(WITH_UPDATABLE_MODELS)
    set(LIBS
        ${LIBS}
        ailoader
    )
ENDIF(WITH_UPDATABLE_MODELS)

# Core library
set(CORE_NAME ${PROJECT_NAME})
add_library(${CORE_NAME}
    SHARED
    ${SRC_FILES}
)
set_target_properties(${CORE_NAME} PROPERTIES
    VERSION ${EDGE_AI_VISION_VERSION}
    SOVERSION ${EDGE_AI_VISION_VERSION_MAJOR})
target_link_libraries(${CORE_NAME}
    PRIVATE
    ${LIBS}
)

# Replace AIF_ALLOWED_EXTENSIONS of ${CMAKE_SOURCE_DIR}/config/edgeai.config.in with the actual extension names
file(READ ${CMAKE_SOURCE_DIR}/config/edgeai.config.in EDGEAI_CONFIG)
IF("${AIF_ALLOWED_EXTENSIONS}" STREQUAL "")
    set(AIF_ALLOWED_EXTENSIONS "libedgeai-vision-base")
ENDIF()
IF("${AIF_ALLOWED_EXTENSIONS}" MATCHES ",")
    string(REPLACE "," ";" AIF_ALLOWED_EXTENSIONS ${AIF_ALLOWED_EXTENSIONS})
ENDIF()
FOREACH(EXTENSION ${AIF_ALLOWED_EXTENSIONS})
    set(EXTENSION_LIST "${EXTENSION_LIST} \"${EXTENSION}\",")
ENDFOREACH(EXTENSION)
string(LENGTH ${EXTENSION_LIST} EXTENSION_LIST_LENGTH)
math(EXPR EXTENSION_LIST_LENGTH "${EXTENSION_LIST_LENGTH}-1")
string(SUBSTRING ${EXTENSION_LIST} 0 ${EXTENSION_LIST_LENGTH} EXTENSION_LIST)
string(REPLACE "AIF_ALLOWED_EXTENSIONS" ${EXTENSION_LIST} EDGEAI_CONFIG ${EDGEAI_CONFIG})
file(WRITE ${CMAKE_BINARY_DIR}/edgeai.config.in ${EDGEAI_CONFIG})
install(FILES ${CMAKE_BINARY_DIR}/edgeai.config.in
    DESTINATION ${AIF_INSTALL_DIR} RENAME edgeai.config)

# Install
install(FILES ${CMAKE_SOURCE_DIR}/files/edgeai-vision.pc.in
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig RENAME edgeai-vision.pc)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/aif
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(TARGETS edgeai-vision
    DESTINATION ${CMAKE_INSTALL_LIBDIR})

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/log")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/tools")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/base")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/delegate")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/facade")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/pipe")
